Comienzo de Tipos de datos

--- a/Javascript/index.html
+++ b/Javascript/index.html
@@ -118,6 +118,11 @@
           </div>
           </article>
         </section>
+        <section>
+          <h1 class="text-4xl text-center">Tipos de datos</h1>
+          <span class="text-gray-500 block text-center"
+            >Los tipos de datos existentes, Objetos, Type Of, Objetos incorporados (Built-in)</span>
+        </section>
     </div>
   </div>
     <!-- <div class="mx-6">
