--- a/index.html
+++ b/index.html
@@ -231,6 +231,33 @@
           <h1 class="text-4xl text-center">Conversion de tipos</h1>
           <span class="text-gray-500 block text-center"
             >Tipos de conversion vs Coercion, Conversion Explicito e Implicito</span>
+            <article class="my-7">
+              <h3 class="text-3xl">Coercion y Conversion</h3>
+              <p class="text-lg my-4">Diferencia entre conversion y coercion, primero que nada la coercion lo hace de forma automatica y la conversion la hacemos de forma explicita, como ejemplo tenemos a los enteros y flotantes que si los mesclamos javascript se adaptara a dar como resultado un float y ahi estamos convirtiendo de forma implicita un tipo de dato pero si le mencionamos alguna forma de conversion como <span class="text-purple-600 font-medium"> parseInt(), parseFloat(), toString()</span> </p>
+              <div class="font-mono text-xl my-6 w-2/4">
+                <p class="text-purple-800">
+                  parseInt(<span class="text-purple-500">float_number</span>);<span class="text-gray-600"> // Explicito -> Integer</span>
+                </p>
+                <p class="text-purple-800">
+                  12 + 0.4 = <span class="text-purple-500">12.4</span> <span class="text-gray-600"> // Implicito -> Float</span>
+                </p>
+            </div>
+            </article>
+        </section>
+        <section>
+          <h1 class="text-4xl text-center">Estructuras de datos</h1>
+          <span class="text-gray-500 block text-center"
+            >Estructura de datos, Json, Colecciones con indice, Arrays</span>
+            <p class="text-lg my-7">
+              Una estructra de datos es la forma mas eficiente y ordenada de agrupar tipos de datos, ya sea en Listas o Arrays, que una lista es una coleccion de muchos datos y un array unicamente es una estructura de datos. 
+            </p>
+            <article class="my-7">
+              <h3 class="text-3xl">Arrays y Listas</h3>
+              <p class="text-lg my-4">La pricipal diferencia entre estos elementos es que un Array en programacion es conocido como una estructura de datos la cual generalmente solo contiene un tipo de dato en especifico y es mayormente usado como un Matriz.</p>
+              <div class="font-mono text-xl">
+                <p class="text-purple-800">let lista = [<span class="text-purple-500">10, 20, "Nombre", true, {'name':'vicente'}</span>]</span>;
+              </div>
+            </article>
         </section>
     </div>
   </div>
