Comienzo de sentencias de control

--- a/index.html
+++ b/index.html
@@ -252,12 +252,34 @@
               Una estructra de datos es la forma mas eficiente y ordenada de agrupar tipos de datos, ya sea en Listas o Arrays, que una lista es una coleccion de muchos datos y un array unicamente es una estructura de datos. 
             </p>
             <article class="my-7">
-              <h3 class="text-3xl">Arrays y Listas</h3>
+              <h3 class="text-3xl">Arrays</h3>
               <p class="text-lg my-4">La pricipal diferencia entre estos elementos es que un Array en programacion es conocido como una estructura de datos la cual generalmente solo contiene un tipo de dato en especifico y es mayormente usado como un Matriz.</p>
               <div class="font-mono text-xl">
                 <p class="text-purple-800">let lista = [<span class="text-purple-500">10, 20, "Nombre", true, {'name':'vicente'}</span>]</span>;
               </div>
             </article>
+            <article class="my-7">
+              <h3 class="text-3xl">Estructura de data</h3>
+              <p class="text-lg my-4">La estructura de datos nos mas que usada para la ingeneria de busqueda y el orden de la informacion de la web <a href="https://developers.google.com/search/docs/appearance/structured-data/intro-structured-data" class="text-blue-600">Mas acerca de ello.</a></p>
+              <h4 class="text-2xl">JSON</h4>
+              <p class="text-lg my-4">Un Json es un formato enrriquezido creado por javascript para el traspaso de informacion sencilla entre leguajes, este archivo unicamente contiene clave y valor. <a class="text-blue-600" href="https://developer.mozilla.org/en-US/docs/Learn/JavaScript/Objects/JSON">Mas informacion de los JSON MDN</a></p>
+            </article>
+        </section>
+        <section>
+          <h1 class="text-4xl text-center">Comparadores de Igualadad</h1>
+          <span class="text-gray-500 block text-center"
+            >Operadores de comparasion</span>
+            <article class="my-4">
+              <p class="text-lg">Los comparadores de valor son 3 los cuales son <span class="text-purple-600 font-medium">==, ===, Object.is</span></p>
+              <p class="text-lg"><span class="text-purple-600 font-semibold">El operador ==</span>: compara que el valor sea el mismo valor.</p>
+              <p class="text-lg"><span class="text-purple-600 font-semibold">El operador ===</span>: compara que el valor sea el mismo valor y ademas el mismo tipo de dato.</p>
+              <p class="text-lg"><span class="text-purple-600 font-semibold">El operador Object.is()</span>: compara que el valor sea el mismo valor y ademas el mismo tipo de dato pero este convalida los valores incaluclables</p>
+            </article>
+        </section>
+        <section>
+          <h1 class="text-4xl text-center">Iteraciones y Bucles</h1>
+          <span class="text-gray-500 block text-center"
+            >For (in/of), Do, While, Condicionales IF, Switch (break/continue), Excepciones</span>
         </section>
     </div>
   </div>
